examples/test/testpolicy16827.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16827
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key19: value12
      key33: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value46
          key16: value27
          key27: value27
      podSelector:
        matchLabels:
          key40: value38
          key1: value4
          key28: value2
